feat: adiciona ignoreCommand para builds condicionais no Vercel
- Frontend só faz build se houver mudanças em frontend/, package.json ou yarn.lock
- Backend só faz build se houver mudanças em backend/, package.json ou yarn.lock
- Otimiza tempo de build e uso de recursos

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,6 +4,7 @@
   "outputDirectory": "dist",
   "installCommand": "yarn install",
   "framework": null,
+  "ignoreCommand": "git diff HEAD^ HEAD --quiet -- backend/ package.json yarn.lock",
   "functions": {
     "api/index.ts": {
       "memory": 1024,
