--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,7 +4,7 @@
   "outputDirectory": "dist",
   "installCommand": "yarn install",
   "framework": null,
-  "ignoreCommand": "git diff HEAD^ HEAD --quiet -- backend/ package.json yarn.lock",
+  "ignoreCommand": "if ! git rev-parse --verify HEAD^ >/dev/null 2>&1; then exit 1; fi; ! (git diff --name-only HEAD^ HEAD | grep -qE '^backend/' || git diff --name-only HEAD^ HEAD | grep -qE '^(package\\.json|yarn\\.lock)$')",
   "functions": {
     "api/index.ts": {
       "memory": 1024,
