refactor: removando ignoreCommand

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,8 +3,7 @@
   "buildCommand": "yarn build",
   "outputDirectory": ".next",
   "installCommand": "yarn install",
-  "framework": "nextjs",
-  "ignoreCommand": "if ! git rev-parse --verify HEAD^ >/dev/null 2>&1; then exit 1; fi; ! (git diff --name-only HEAD^ HEAD | grep -qE '^frontend/' || git diff --name-only HEAD^ HEAD | grep -qE '^(package\\.json|yarn\\.lock)$')"
+  "framework": "nextjs"
 }
 
 
